Fixed home page spacing and moved css stuff around again cause f

--- a/_scss/base.scss
+++ b/_scss/base.scss
@@ -12,7 +12,6 @@ body {
 }
 
 .body-content {
-    min-height: calc(100vh - 340px);
     margin: 0 auto;
     max-width: 90%;
     left: -10px;
